[package]
name = "gltf-viewer"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
nightshade = { version = "0.6.63", features = ["egui", "tracing", "fbx"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
openxr = ["nightshade/openxr"]

[patch.crates-io]
nightshade = { git = "https://github.com/matthewjberger/nightshade.git", branch = "main" }
